fixed tables have overflow scroll

--- a/site/stylesheets/perspective.css
+++ b/site/stylesheets/perspective.css
@@ -246,6 +246,24 @@ h4 {
   background-color: white;
 }
 
+@media only screen and (max-width: 40.063em) {
+
+  /* see by https://github.com/twbs/bootstrap/blob/master/scss/_tables.scss#L170 */
+  .table-responsive {
+    display: block;
+    width: 100%;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+
+    // Prevent double border on horizontal scroll due to use of `display: block;`
+    > .table-bordered {
+      border: 0;
+    }
+  }
+
+}
+
 .tabular {
   border-width: 0px;
   padding: 3px;
